<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".EditFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="108dp" />


    <TextView
        android:id="@+id/spaceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/space_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/spaceView"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/spaceView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/circleNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/circle_name_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/circleNameView"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/circleNameView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/spaceView" />

    <TextView
        android:id="@+id/penNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pen_name_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/penNameView"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/penNameView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/circleNameView" />

    <TextView
        android:id="@+id/priceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/priceView"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/priceView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/priceUnit"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/penNameView" />

    <TextView
        android:id="@+id/priceUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="円"
        app:layout_constraintBaseline_toBaselineOf="@+id/priceView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/giftLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gift_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/giftSwitch"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/giftSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/priceView" />

    <TextView
        android:id="@+id/noteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/note_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/giftLabel" />

    <EditText
        android:id="@+id/noteView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="20sp"
        android:gravity="start|top"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteLabel" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>